--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -121,11 +121,22 @@ year = {2015}
 } 
 
 @inproceedings{KarpathyCVPR14,
-  title     = {Large-scale Video Classification with Convolutional Neural Networks},
-  author    = {Andrej Karpathy and George Toderici and Sanketh Shetty and Thomas Leung and Rahul Sukthankar and Li Fei-Fei},
-  year      = {2014},
-  booktitle = {CVPR}
+ author = {Karpathy, Andrej and Toderici, George and Shetty, Sanketh and Leung, Thomas and Sukthankar, Rahul and Fei-Fei, Li},
+ title = {Large-Scale Video Classification with Convolutional Neural Networks},
+ booktitle = {Proceedings of the 2014 IEEE Conference on Computer Vision and Pattern Recognition},
+ series = {CVPR '14},
+ year = {2014},
+ isbn = {978-1-4799-5118-5},
+ pages = {1725--1732},
+ numpages = {8},
+ url = {https://doi.org/10.1109/CVPR.2014.223},
+ doi = {10.1109/CVPR.2014.223},
+ acmid = {2680211},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {convolutional, neural, network, video, classification, action, recognition, large-scale, dataset, sports},
 }
+
 
 @incollection{NIPS2014_5353,
 title = {Two-Stream Convolutional Networks for Action Recognition in Videos},
@@ -340,12 +351,25 @@ isbn="978-3-319-23461-8"
   url       = {http://cvrr.ucsd.edu/publications/2010/sivaraman_ITS10.pdf}
 }
 
-
 @article{CVRR_sign_detection,
-  author    = {Andreas Møgelmose and Mohan M. Trivedi and Thomas B. Moeslund},
-  title     = {Vision based Traffic Sign Detection and Analysis for Intelligent Driver Assistance Systems: Perspectives and Survey},
-  year      = {2012}
- }
+ author = {Mogelmose, Andreas and Trivedi, Mohan Manubhai and Moeslund, Thomas B.},
+ title = {Vision-Based Traffic Sign Detection and Analysis for Intelligent Driver Assistance Systems: Perspectives and Survey},
+ journal = {Trans. Intell. Transport. Sys.},
+ issue_date = {December 2012},
+ volume = {13},
+ number = {4},
+ month = dec,
+ year = {2012},
+ issn = {1524-9050},
+ pages = {1484--1497},
+ numpages = {14},
+ url = {http://dx.doi.org/10.1109/TITS.2012.2209421},
+ doi = {10.1109/TITS.2012.2209421},
+ acmid = {2719015},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+}
+
 
 @phdthesis{phdthesis_problog,
   author       = {Dimitar Shterionov}, 
@@ -383,6 +407,19 @@ isbn="978-3-319-23461-8"
   year      = {2017},
   url       = {https://cdn.euroncap.com/media/30701/euroncap-roadmap-2025-v4-print.pdf}
 }
+
+@INPROCEEDINGS{Deng09imagenet, 
+author={J. Deng and W. Dong and R. Socher and L. Li and Kai Li and Li Fei-Fei}, 
+booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition}, 
+title={ImageNet: A large-scale hierarchical image database}, 
+year={2009}, 
+volume={}, 
+number={}, 
+pages={248-255}, 
+keywords={computer vision;image resolution;image retrieval;Internet;multimedia computing;ontologies (artificial intelligence);trees (mathematics);very large databases;visual databases;ImageNet database;large-scale hierarchical image database;Internet;image retrieval;multimedia data;large-scale ontology;wordNet structure;image resolution;subtree;computer vision;Large-scale systems;Image databases;Explosions;Internet;Robustness;Information retrieval;Image retrieval;Multimedia databases;Ontologies;Spine}, 
+doi={10.1109/CVPR.2009.5206848}, 
+ISSN={1063-6919}, 
+month={June},}
 
 @inproceedings{imagenet_cvpr09,
         AUTHOR = {Deng, J. and Dong, W. and Socher, R. and Li, L.-J. and Li, K. and Fei-Fei, L.},
