--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -467,3 +467,36 @@ keywords={control engineering computing;driver information systems;optical radar
 doi={10.1109/MCE.2018.2828440}, 
 ISSN={2162-2248}, 
 month={Sept},}
+
+@article{Dubba2015LearningRE,
+  title={Learning Relational Event Models from Video},
+  author={Krishna Sandeep Reddy Dubba and Anthony G. Cohn and David C. Hogg and Mehul Bhatt and Frank Dylla},
+  journal={J. Artif. Intell. Res.},
+  year={2015},
+  volume={53},
+  pages={41-90}
+}
+
+@Inbook{Cohn2006,
+author="Cohn, A. G.
+and Hogg, D. C.
+and Bennett, B.
+and Devin, V.
+and Galata, A.
+and Magee, D. R.
+and Needham, C.
+and Santos, P.",
+editor="Christensen, Henrik I.
+and Nagel, Hans-Hellmut",
+title="Cognitive Vision: Integrating Symbolic Qualitative Representations with Computer Vision",
+bookTitle="Cognitive Vision Systems: Sampling the Spectrum of Approaches",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="221--246",
+abstract="We describe the challenge of combining continuous computer vision techniques and qualitative, symbolic methods to achieve a system capable of cognitive vision. Key to a truly cognitive system, is the ability to learn: to be able to build and use models constructed autonomously from sensory input. In this paper we overview a number of steps we have taken along the route to the construction of such a system, and discuss some remaining challenges.",
+isbn="978-3-540-33972-4",
+doi="10.1007/11414353_14",
+url="https://doi.org/10.1007/11414353_14"
+}
+
